<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xbongbong.docall.MainActivity">

    <Button
        android:id="@+id/btn_in_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_get_in_phone_number" />

    <Button
        android:id="@+id/btn_in_call_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_get_in_phone_number" />

    <Button
        android:id="@+id/btn_out_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_get_out_phone_number"/>

    <Button
        android:id="@+id/btn_out_call_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_get_out_phone_number"/>

    <Button
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"/>

</LinearLayout>
